# thermalcorr

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
VS2008/: VS2008.sln  VS2008.vcproj  main.cpp
doc/: Doxyfile
src/: BrazedPlateHeatExchanger.cpp  BrazedPlateHeatExchanger.h  Commons.i  InternalFlow.cpp  InternalFlow.h  InternalFlow.i  InternalFlow_wrap.cxx  Microchannel.cpp  Microchannel.h  TwoPhaseHTDP.h  thermalcorr.h
wrappers/Python/: setup.py  test.py
